<resources>
    <string name="app_name">iComicPRO</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_refresh">Odśwież</string>
    <string name="action_about">Informacje</string>


    <string name="resource_error">Brak dostępnych rozdziałów</string>
    <string name="critical_error">Błąd dostępu do plików! Aplikacja potrzebuje uprawnień dostępu do pamięci urządzenia.</string>
    <string name='screen_switch'>Automatyczny pełny ekran</string>
    <string name="infoError">ERROR</string>
    <string name="infoMessage">Autorzy: </string>
    <string name="authorString">Katarzyna Czjkowska 242079 oraz Adam Krizar 241276</string>
    <string name="infoVersion">Wersja aplikacji: </string>

    <string name="last_chapter">Brak następnych rozdziałów</string>
    <string name="first_chapter">Brak poprzednich rozdziałów</string>

    <!-- preference keys -->
    <string name="preference_key">com.example.icomicpro.PREFERENCE_FILE_KEY</string>

    <string name="first_time_key">first_time</string>

</resources>