<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textAlignment="center"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/aboutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/authorLayout"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AuthorLabel"
                    android:layout_width="150dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/infoMessage"
                    android:textColor="@color/colorText"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/DataLabel"
                    android:layout_width="160dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:textAlignment="textStart"
                    android:text="@string/authorString" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/kryptoLayout"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/versionName"
                    android:layout_width="150dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/infoVersion"
                    android:textColor="@color/colorText"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/versionLabel"
                    android:layout_width="160dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:text="@string/infoError" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/returnbutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="56dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/arrow_back"
        android:onClick="returnSettings"
        android:title="@string/action_settings"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="254dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/action_about"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>